# AMCOS

./: Cargo.toml  README.md  RKLB.csv  config.toml
src/: main.rs  stock_option.rs
~/.amcos/data/: AAPL.csv
