[package]
name = "amcos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono  = "0.4.19"
rand = "0.8.4"
time = "*"
rand_distr = "0.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
GSL = "6.0"
rayon = "1.5"
toml = "0.5.8"
reqwest = {version = "0.11.0", features = ["blocking"]}